--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,22 +34,37 @@ jobs:
           # Compute storage account name if not provided (must be 3-24 lowercase letters/numbers)
           if [ -z "${{ github.event.inputs.storageAccountName }}" ]; then
             repo_safe=$(echo "${GITHUB_REPOSITORY//[^a-zA-Z0-9]/}" | tr '[:upper:]' '[:lower:]')
-            # use run id to help uniqueness, trim to keep within 24 chars
-            storage_default="${repo_safe}${GITHUB_RUN_ID}"
-            storage_default=$(echo "$storage_default" | tr -cd '[:alnum:]' | cut -c1-24 | tr '[:upper:]' '[:lower:]')
+            # use short git SHA for uniqueness
+            short_hash=$(echo "$GITHUB_SHA" | cut -c1-8 | tr '[:upper:]' '[:lower:]')
+            storage_default="${repo_safe}${short_hash}"
+            # keep only alnum, lowercase, and ensure max 24 chars
+            storage_default=$(echo "$storage_default" | tr -cd '[:alnum:]' | tr '[:upper:]' '[:lower:]' | cut -c1-24)
+            # ensure minimum length of 3 (pad with 'sa' if necessary)
+            if [ ${#storage_default} -lt 3 ]; then
+              storage_default="${storage_default}sa"
+              storage_default=$(echo "$storage_default" | cut -c1-24)
+            fi
           else
             storage_default="${{ github.event.inputs.storageAccountName }}"
           fi
 
-          # Compute function app name if not provided (app name allows letters, numbers, '-' and up to 60 chars)
+          # Compute function app name if not provided (allowed: letters, numbers, '-', 2-60 chars)
           if [ -z "${{ github.event.inputs.functionAppName }}" ]; then
             owner=$(echo "${GITHUB_REPOSITORY}" | cut -d'/' -f1)
             repo=$(echo "${GITHUB_REPOSITORY}" | cut -d'/' -f2)
-            func_default="${owner}-${repo}-${GITHUB_RUN_ID}"
-            func_default=$(echo "$func_default" | tr '[:upper:]' '[:lower:]' | tr '/' '-')
-            func_default=$(echo "$func_default" | cut -c1-60)
+            short_hash=$(echo "$GITHUB_SHA" | cut -c1-8 | tr '[:upper:]' '[:lower:]')
+            func_default="${owner}-${repo}-${short_hash}"
+            # sanitize: lowercase, replace invalid chars with '-', collapse duplicates, trim to 60, remove leading/trailing '-'
+            func_default=$(echo "$func_default" | tr '[:upper:]' '[:lower:]' | sed 's/[^a-z0-9-]/-/g' | sed 's/-\{2,\}/-/g' | sed 's/^-//' | sed 's/-$//' | cut -c1-60)
+            # ensure minimum length 2
+            if [ ${#func_default} -lt 2 ]; then
+              func_default="${func_default}${short_hash}"
+              func_default=$(echo "$func_default" | cut -c1-60)
+            fi
           else
             func_default="${{ github.event.inputs.functionAppName }}"
+            # ensure lowercase
+            func_default=$(echo "$func_default" | tr '[:upper:]' '[:lower:]')
           fi
 
           echo "Using storageAccountName: $storage_default"
