--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -90,7 +90,7 @@ jobs:
       - name: 'Deploy Function App (zip)'
         run: |
           # Create a zip of the function folder
-          cd QueueMessageCountToLA
+          cd functionApp
           zip -r ../functionapp.zip *
           cd ..
           az functionapp deployment source config-zip --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} --name ${{ steps.prepare.outputs.functionAppName }} --src functionapp.zip
