--- a/.github/workflows/deploy-function.yml
+++ b/.github/workflows/deploy-function.yml
@@ -17,17 +17,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up Python (required by some Az CLI components)
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.x'
-
-      - name: Login to Azure CLI
-        uses: azure/login@v1
+      - name: 'Azure Login (OIDC)'
+        uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          enable-AzPSSession: true
 
       - name: Determine deployment targets
         id: vars
